changed platelet protein methods - using GO pathways, so edited various chapters

--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -33,7 +33,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 The work within this chapter has been published in the International Journal of Obesity[@Goudswaard2021]. I am the first author of the publication; I performed all analyses, created all figures and tables and wrote the manuscript. 
 
-Supplementary Tables 1-7 can be found here https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx 
+Supplementary Tables 1-10 can be found here https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx 
 
 ## Introduction
 
@@ -41,7 +41,7 @@ The previous chapters (Chapter \@ref(BMI-platelets-INTERVAL) and Chapter \@ref(B
 
 A benefit of studying the systematic effects of BMI on the circulating proteome is that proteins are often more suitable pharmacological targets than metabolites. Efforts to study the effect of BMI on the proteome have generally been in an observational framework[@Cominetti2018]. It is estimated that 25% of proteins in the human proteome circulate in blood[@Gold2012], which is important as the majority of druggable targets are such proteins[@Imming2006]. Studying the effect of BMI on a large set of proteins has only recently become possible with newly developed proteomic technologies such as the SomaLogic platform, with the ability to quantify enzymes, protein kinases and transport proteins with unprecedented sensitivity[@Rohloff2014]. Utilisation of SomaLogic within a trial or cohort setting has recently become more widespread, such as within the INTERVAL study, a UK cohort of blood donors[@Sun2018]. There is evidence that proteins which change as a result of a higher BMI may contribute to thrombosis (ref Andrei's paper): identification of such proteins is important in understanding how higher BMI causes disease and to identify targets which may benefit from pharmacological intervention. It is possible that proteins that are altered by BMI may contribute to thrombosis by activating platelets (Chapter \@ref(chemokine-platelets)).
 
-In this chapter, the aim was to measure associations between adiposity and the human proteome and to also estimate the underlying effects in a causal framework (Figure \@ref(fig:BMI-protein-graphic)). Using data on 2737 participants from INTERVAL, the effects of BMI on 4034 (3622 unique) plasma protein traits were estimated, in both observational and MR frameworks. The agreement between effect estimates from different methods were examined and enrichment analyses of the most strongly altered proteins were performed to map their potential relevance to cardiovascular disease.
+In this chapter, the aim is to measure associations between adiposity and the human proteome and to also estimate the underlying effects in a causal framework (Figure \@ref(fig:BMI-protein-graphic)). Using data on 2737 participants from INTERVAL, the effects of BMI on 4034 (3622 unique) plasma protein traits will be estimated in both observational and MR frameworks. The specific effect of BMI on platelet proteins will be explored, as well as a disease enrichment analysis.
 
 (ref:caption-BMI-protein-graphic) **Schematic of the associations explored in Chapter \@ref(BMI-protein-MR).** This chapter explores the causal effect of BMI on the plasma proteome and explores whether these changes might contribute to cardiovascular diseases. Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic) Schematic of the associations explored in /@ref(BMI-protein-MR).
@@ -65,7 +65,7 @@ The population characteristics of INTERVAL participants with SomaLogic data who 
 
 A Shapiro-Wilk test was used to confirm whether the GRS showed a normal distribution. MR analyses were conducted using two-stage least squares (2SLS) regression models with robust standard errors, using the systemfit function as part of the systemfit package[@Henningsen2007], with measured BMI in SD units and the GRS for BMI as the instrumental variable. These MR estimates reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. We report estimates from the direct linear associations between BMI and proteins as "observational" estimates and those from the 2SLS causal effect estimates as "MR estimates". Agreement between observational and MR estimates was examined using a separate linear regression. This was performed: 1) for all proteins, and 2) excluding the proteins that fell below our P-value reference point for strong evidence (defined below) to examine whether agreement is limited to "top hits" or applies throughout the effect distribution. Agreement between observational estimates and MR estimates would suggest that there are causal effects of BMI across the general proteome, with differences in estimates suggesting confounding of observational estimates. 
 
-To account for multiple testing, a Bonferroni correction was used to adjust results. This was informed by the correlation between proteins, adjusting only for the estimated number of independent traits (Figure \@ref(fig:Corr-mat-proteins)). Correlation was assessed by a Spearman’s correlation matrix. From a starting number of 4034, the number of independent proteins was  3655 (using a correlation cut-off of r  = 0.8 or tree cut height = 0.2 between proteins, Figure \@ref(fig:Dend-proteins)), dendrogram made using  "iPVs" package https://github.com/hughesevoanth/iPVs). We utilised a Bonferroni adjusted P-value of 0.05/3655 = 1.4x10^-5^ to indicate strong evidence in this sample. Full results are presented in the supplementary material. The association between BMI and platelet proteins were also examined by searching the results for the term "platelet" within the protein name. This approach was used due to the lack of distinct groupings in the SomaLogic protein list.
+To account for multiple testing, a Bonferroni correction was used to adjust results. This was informed by the correlation between proteins, adjusting only for the estimated number of independent traits (Figure \@ref(fig:Corr-mat-proteins)). Correlation was assessed by a Spearman’s correlation matrix. From a starting number of 4034, the number of independent proteins was  3655 (using a correlation cut-off of r  = 0.8 or tree cut height = 0.2 between proteins, Figure \@ref(fig:Dend-proteins)), dendrogram made using  "iPVs" package https://github.com/hughesevoanth/iPVs). We utilised a Bonferroni adjusted P-value of 0.05/3655 = 1.4x10^-5^ to indicate strong evidence in this sample. Full results are presented in the supplementary material. The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins.
 
 (ref:caption-Corr-mat-proteins) **Correlation matrix of all protein traits analysed by SomaLogic (4,034)**. The colour corresponds to the correlation coefficient ranging from 1 (dark blue) to -1 (dark red).
 (ref:scaption-Corr-mat-proteins) Correlation matrix of all protein traits analysed by SomaLogic
@@ -122,11 +122,13 @@ column_spec(1, width = "6cm") %>%
 
 ### Observational estimates of associations of BMI with protein traits 
 
-In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 1). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2 380 adults, there were 1447 associations at the same reference point (Supplementary Table 2). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^). There was evidence that proteins involved in platelet activation were associated with BMI: BMI was negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^). Platelet endothelial aggregation receptor 1 (PEAR1) was negatively associated with BMI (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^). Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 2).  
+In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 3). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2 380 adults, there were 1447 associations at the same reference point (Supplementary Table 4). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^). 
+
+There were 262 unique platelet proteins that were analysed in INTERVAL, 121 were associated with BMI in the confounder adjusted model (46%). There was evidence that proteins involved in platelet pathways were associated with BMI. Higher BMI was negatively associated with antithrombin-III (-0.26 SD, 95% CI -0.30 to -0.22, p=9.6x10^-42^). BMI was also negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^), as was Platelet endothelial aggregation receptor 1 (PEAR1) (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^).  Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 4 & Supplementary Table 5).  
 
 ### Observational associations of covariables with BMI and protein traits
 
-Age, sex, and frequencies of smoking and alcohol intake were each associated with BMI (Table \@ref(tab:INT-confounders-BMI)). Males had a higher BMI than females (0.17 SD, 95% CI 0.10-0.25, P=5.8x10^-6^). Age was positively associated with BMI (0.01 SD higher per year older, 95% CI 0.009-0.015, P=1.2x10^-18^). Smoking frequency was positively associated with BMI, but alcohol intake frequency was negatively associated with BMI. Covariables (age, sex, smoking and alcohol) showed associations with protein traits (Supplementary Tables 3-6 and Figures \@ref(fig:QQ-confounder-proteins) A-D). There was evidence for 18 associations between age and proteins, 26 associations between sex and proteins, 38 proteins associated with smoking and 137 proteins associated with alcohol at the Bonferroni-adjusted level of p<1.4x10^-5^.
+Age, sex, and frequencies of smoking and alcohol intake were each associated with BMI (Table \@ref(tab:INT-confounders-BMI)). Males had a higher BMI than females (0.17 SD, 95% CI 0.10-0.25, P=5.8x10^-6^). Age was positively associated with BMI (0.01 SD higher per year older, 95% CI 0.009-0.015, P=1.2x10^-18^). Smoking frequency was positively associated with BMI, but alcohol intake frequency was negatively associated with BMI. Covariables (age, sex, smoking and alcohol) showed associations with protein traits (Supplementary Tables 6-9 and Figures \@ref(fig:QQ-confounder-proteins) A-D). There was evidence for 18 associations between age and proteins, 26 associations between sex and proteins, 38 proteins associated with smoking and 137 proteins associated with alcohol at the Bonferroni-adjusted level of p<1.4x10^-5^.
 
 (ref:caption-INT-confounders-BMI) **Associations between covariables (exposure) and standardised BMI (outcome)**
 (ref:scaption-INT-confounders-BMI) Associations between covariables (exposure) and standardised BMI (outcome)
@@ -185,9 +187,9 @@ column_spec(1, width = "5cm")   %>%
 
 ### MR estimates of associations between BMI and protein traits
 
-In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta and PILR alpha-associated neural protein. The estimates for the effect of BMI on platelet proteins generally were of a similar magnitude to the fully adjusted observational analysis. The causal estimate for the effects of BMI on PAFAH was -0.24 SD (95% CI -0.46 to -0.03, p=0.028). Similarly, the causal estimate for the effect of BMI on PEAR1 was similar to the observational estimate (-0.21 SD, 95% CI -0.43 to 0.005, p=0.06). Despite a similar magnitude of estimate, these associations were not detected as these estimates were less precise.
+In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta and PILR alpha-associated neural protein. 
 
-Supplementary Table 7 provides the full MR results.
+The MR estimates for the effect of BMI on platelet proteins generally were of a similar magnitude to the fully adjusted observational analysis, however none of the platelet proteins passed the multiple testing adjusted p-value. The causal estimate for the effects of BMI on PAFAH was -0.24 SD (95% CI -0.46 to -0.03, p=0.028). Similarly, the causal estimate for the effect of BMI on PEAR1 was similar to the observational estimate (-0.21 SD, 95% CI -0.43 to 0.005, p=0.06). Despite a similar magnitude of estimate, these associations were not detected as these estimates were less precise. Supplementary Table 10 provides the full MR results and Supplementary Table 5 has the observational and MR estimate for each platelet protein combined.
 
 (ref:caption-ObsMRforestplot2) **Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates**
 (ref:scaption-ObsMRforestplot2) Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates
@@ -231,7 +233,7 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/Obs_MR_scatter_without_top8
 
 ### Enrichment analysis of strongest BMI-protein associations
 
-In examining the clustering of proteins, visual representation using a scree plot suggested there were five PCs that explained 30.3% of the variance (Figure \@ref(fig:PCs)). After PC5 there was clear drop in variance explained, therefore other PCs were excluded. These five PCs were entered into a k-means analysis, which provided evidence for five clusters (grouping of individual proteins is included in Supplementary Table 7). To identify which cluster was most strongly affected by BMI, the median absolute beta coefficient divided by the SE for each cluster was compared with the overall estimate. Six of the proteins out of the eight strongest BMI-protein MR estimates were in cluster 2 (Supplementary Table 7). There was consistent evidence that cluster 2 showed a stronger association with BMI than the overall average BMI-protein effect both observationally (3.79 (IQR 1.62-7.06) vs 3.35 (IQR 1.57-5.83) respectively, P=3.7x10^-4^) and in MR (0.85 (IQR 0.41-1.46) vs 0.74 (IQR 0.32-1.14), P=5.3x10^-6^, Table \@ref(tab:Cluster-estimates)). Cluster 2 showed consistent evidence of a having the largest BMI effect. Compared with the full protein list in SomaLogic, the proteins in cluster 2 were enriched for disease (Table \@ref(tab:DAVID-enrichment-cluster2)), including cardiovascular disease (1.14 fold enrichment, P=1.3x10^-4^), renal disease (1.22 fold enrichment, P=1.0x10^-3^) cancer (1.1 fold enrichment, P=9.5x10^-3^) and metabolic disease (1.08 fold enrichment, P=4.2x10^-2^). No other individual cluster showed enrichment for disease. Enrichment for disease was also explored by comparing the proteins which had an association with BMI (P<1.4x10^-5^) in the confounder-adjusted regression model with the total protein list. Compared with the full protein list, the proteins which showed a stronger observational association with BMI were enriched for renal disease (1.21 fold enrichment, P=0.001) and metabolic disease (1.9 fold enrichment, P=0.015, Table \@ref(tab:DAVID-enrichment-obs)). 
+In examining the clustering of proteins, visual representation using a scree plot suggested there were five PCs that explained 30.3% of the variance (Figure \@ref(fig:PCs)). After PC5 there was clear drop in variance explained, therefore other PCs were excluded. These five PCs were entered into a k-means analysis, which provided evidence for five clusters (grouping of individual proteins is included in Supplementary Table 10). To identify which cluster was most strongly affected by BMI, the median absolute beta coefficient divided by the SE for each cluster was compared with the overall estimate. Six of the proteins out of the eight strongest BMI-protein MR estimates were in cluster 2 (Supplementary Table 10). There was consistent evidence that cluster 2 showed a stronger association with BMI than the overall average BMI-protein effect both observationally (3.79 (IQR 1.62-7.06) vs 3.35 (IQR 1.57-5.83) respectively, P=3.7x10^-4^) and in MR (0.85 (IQR 0.41-1.46) vs 0.74 (IQR 0.32-1.14), P=5.3x10^-6^, Table \@ref(tab:Cluster-estimates)). Cluster 2 showed consistent evidence of a having the largest BMI effect. Compared with the full protein list in SomaLogic, the proteins in cluster 2 were enriched for disease (Table \@ref(tab:DAVID-enrichment-cluster2)), including cardiovascular disease (1.14 fold enrichment, P=1.3x10^-4^), renal disease (1.22 fold enrichment, P=1.0x10^-3^) cancer (1.1 fold enrichment, P=9.5x10^-3^) and metabolic disease (1.08 fold enrichment, P=4.2x10^-2^). No other individual cluster showed enrichment for disease. Enrichment for disease was also explored by comparing the proteins which had an association with BMI (P<1.4x10^-5^) in the confounder-adjusted regression model with the total protein list. Compared with the full protein list, the proteins which showed a stronger observational association with BMI were enriched for renal disease (1.21 fold enrichment, P=0.001) and metabolic disease (1.9 fold enrichment, P=0.015, Table \@ref(tab:DAVID-enrichment-obs)). 
 
 (ref:caption-Cluster-estimates) **Comparison of cluster median(absolute beta coefficient / SE) with the overall median for observational and MR analyses**. *One-tailed pairwise Wilcox test
 (ref:scaption-Cluster-estimates) Comparison of BMI-protein estimates among protein clusters
@@ -309,10 +311,12 @@ For proteins with stronger MR derived association evidence, it is important to e
 
 Our results help to provide contextualisation for proteins which have already been implicated in disease. For example, results suggest a strong positive effect of BMI on FABP4, an adipokine found primarily in adipocytes and macrophages[@Furuhashi2014]. This MR estimate supports the association which has been suggested in previous observational studies[@Xu2006]. FABP4 has been implicated in cardiometabolic disease: a SNP which increases FABP4 was found to raise the odds of type II diabetes among adults[@Gudmundsdottir2020], potentially through its contribution to higher insulin resistance[@Nakamura2017]. FABP4 has also been associated with higher risk of atherosclerosis among adults[@Yeung2007]. A strong SHBG-lowering effect of higher BMI was also suggested here. The SHBG molecule is a glycoprotein which binds androgens and oestrogens and suppresses their activity[@Wallace2013]; a reduction in SHBG is therefore expected to lead to higher levels of circulating sex hormones. The negative effect of BMI on SHBG seen here supports observational findings[@Cooper2015; @Goto2014; @Baglietto2009]. When evaluating the role of SHBG in disease, MR analysis suggests that an increase in SHBG contributes to a decrease in risk of cardioembolic stroke[@Zheng2020]. Other studies have also implicated lower SHBG levels in increasing type II diabetes risk [@Ritchie2019]. The exact mechanisms leading from decreased SBHG to ill-health is unclear, but may arise as a result of the increased bioavailability of testosterone and oestrogen[@Wallace2013].
 
-There were also various platelet proteins which were detected in the plasma. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimate were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF). PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be proatherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising the integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
+There were also a range of platelet proteins which were detected in the plasma (262 proteins). These are proteins which have been linked to platelet GO pathways. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimates were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF). PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be atherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising the integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
+
+MDC and TARC??
 
 Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. We therefore examined proteins grouped into clusters of similar features, compared BMI-protein estimates of each cluster with overall estimates and explored enrichment for genes related to disease. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to cardiovascular disease, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
 
-This analysis has some limitations. Firstly, although INTERVAL is one of the largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR: based on the detectable (P<1.4x10~-5~) median absolute observational effect size (0.13 SDs), our analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for our sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Secondly, height and weight were self-reported which could bias results towards the null due to systematic error in BMI measurement. However, strong correlations are often reported between self-reported and measured BMI[@Nikolaou2017] and the validity of self-reported BMI is supported by the association between the GRS for BMI and self-reported BMI in INTERVAL to the degree expected. Thirdly, the small degree of overlap between INTERVAL and UK Biobank (participants used for the source GWAS for BMI who were also in INTERVAL) may have a biasing effect on estimates, though this is likely to be towards the null. We anticipate that overall, this bias would make estimates more conservative[@Burgess2016]. Fourth, we recognise a lack of availability of possible confounders such as socio-economic position (which likely affect both BMI and protein traits related to cardiovascular disease processes[@Rosengren2019; @Tillmann2017]. Residual confounding may help account for the divergence between observed and expected P-values seen in observational versus MR models. Fifth, the proteins examined are highly correlated and we therefore may not fully be describing changes in individual proteins. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL data set.
+This analysis has some limitations. The limitations that have arisen through use of the INTERVAL study have been discussed in section \@ref(INTERVAL-limitations). One of the limitations specific to the proteomic data in INTERVAL is that although it is one of largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR. Based on the detectable (P<1.4x10~-5~) median absolute observational effect size (0.13 SDs), our analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for our sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Additionally, the proteins examined are highly correlated and therefore changes in individual proteins may not fully be described. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL data set.
 
 This chapter utilised SomaLogic to explore the relationship between BMI and plasma proteins in unprecedented scope and detail, in both an observational and MR framework. There is evidence for a broad impact of higher adiposity on the circulating proteome. Causal evidence was strongest for BMI in relation to proteins involved in regulating appetite, sex hormones, and inflammation. Protein alterations were found to be enriched for genes related to cardiovascular and metabolic disease, therefore implicating an environment which may lead to platelet hyperactivity. Altogether, these results help to focus attention onto new potential proteomic signatures of obesity-related disease. Further characterisation of the role of such proteomic profiles in cardiovascular disease using MR is warranted, as well as characterising the role of such proteins on platelet function.
